Update Sign Language Classification.ipynb

--- a/Sign Language Classification.ipynb
+++ b/Sign Language Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9ca8ce95",
+   "id": "3bdd3b36",
    "metadata": {},
    "source": [
     "## Project: Sign Language Digits Classification\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "546390b3",
+   "id": "bf1bd7aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "91a2ae24",
+   "id": "35f01452",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7ffa4cb",
+   "id": "96d22319",
    "metadata": {},
    "source": [
     "### Data source\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e484c205",
+   "id": "ab6e5592",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38d51f49",
+   "id": "7111180d",
    "metadata": {},
    "source": [
     "### Quick data visualization"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "217f6e76",
+   "id": "09f99664",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe6a0d98",
+   "id": "3db9340e",
    "metadata": {},
    "source": [
     "### Read and preparation the data\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c77e2f66",
+   "id": "ded75bdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e5d5a8eb",
+   "id": "6309725d",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2d072f93",
+   "id": "613f6692",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "315cdc7f",
+   "id": "65014510",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9e8afc17",
+   "id": "5425b727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f04fc23b",
+   "id": "b0f04ad6",
    "metadata": {},
    "source": [
     "### Train-Test Split Data"
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "640eb45e",
+   "id": "94574e51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5de23536",
+   "id": "e7810fd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c2612ac8",
+   "id": "4ca83793",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "41d827ff",
+   "id": "6023f0f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3de60be",
+   "id": "113ac5ab",
    "metadata": {},
    "source": [
     "### Image augmentation"
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e2f515e2",
+   "id": "7118e40d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "66e45a09",
+   "id": "ba3873f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "826bee81",
+   "id": "5c53eb9c",
    "metadata": {},
    "source": [
     "### Create CNN Model"
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ca174659",
+   "id": "c41260a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5ff5cfb1",
+   "id": "147d9557",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "bd2e89b7",
+   "id": "3cebb869",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "74597671",
+   "id": "1971844c",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8d1fd008",
+   "id": "e6631707",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "89ef8cd4",
+   "id": "a346bd02",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97dab390",
+   "id": "6f334301",
    "metadata": {},
    "source": [
     "### Evaluate"
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "998b1632",
+   "id": "98f9468f",
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cd0ec9eb",
+   "id": "85514f7d",
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "008997cb",
+   "id": "def13be1",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5727cdef",
+   "id": "6fcd66f7",
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7604be6b",
+   "id": "cdd43078",
    "metadata": {},
    "source": [
     "## Test predictions"
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5f523f9a",
+   "id": "7b0bc1f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,32 +933,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "ac2fa137",
+   "execution_count": 54,
+   "id": "c21dab34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_test_directory = r'C:\\Kate\\AI_Research\\04_Sign_Language_Numbers\\Sign Language for Numbers\\test'"
+    "PATH_TEST = r'C:\\Kate\\AI_Research\\04_Sign_Language_Numbers\\Sign Language for Numbers\\test'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "c215cffc",
+   "execution_count": 55,
+   "id": "0789251e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model average score is:  0.9267190051349726\n"
+      "Model average score is:  0.9267190051349726 %\n"
      ]
     }
    ],
    "source": [
     "avg_prediction_score = 0;\n",
     "count = 0;\n",
-    "for filename in os.listdir(path_test_directory):\n",
+    "for filename in os.listdir(PATH_TEST):\n",
     "    if filename.endswith(\".jpg\") or filename.endswith(\".png\"):\n",
     "        img_file_path = (os.path.join(path_test_directory, filename))\n",
     "        score = model_prediction(img_file_path)\n",
@@ -967,13 +967,13 @@
     "    else:\n",
     "        continue\n",
     "\n",
-    "print(\"Model average score is: \", avg_prediction_score/count)"
+    "print(\"Model average score is: \", avg_prediction_score/count,\"%\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b73ac12",
+   "id": "05a4aeb1",
    "metadata": {},
    "outputs": [],
    "source": []
